[package]
name    = "screenruster"
version = "0.1.1-dev"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "X11 screen saver and locker."
repository  = "https://github.com/meh/screenruster"
keywords    = ["x11", "graphics"]

[dependencies]
log        = "0.3"
env_logger = "0.3"

clap  = "2"
xdg   = "2"
toml  = "0.1"
rand  = "0.3"
users = "0.5"
dbus  = "0.3"

libc               = "0.2"
x11                = { version = "2", features = ["xlib", "glx", "xrandr", "dpms"] }
screenruster-saver = "0.1.0"

[dependencies.pam-sys]
version = "0.4"
optional = true

[features]
default = ["auth-pam"]

# Internal authorization support.
auth-internal = []

# PAM authorization support.
auth-pam = ["pam-sys"]

# Respect PAM account management.
auth-pam-accounts = ["auth-pam"]
