[package]
name    = "screenruster"
version = "0.1.9"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "X11 screen saver and locker."
repository  = "https://github.com/meh/screenruster"
keywords    = ["x11", "graphics"]

[features]
default = ["auth-pam"]

# Internal authorization support.
auth-internal = []

# PAM authorization support.
auth-pam = ["pam-sys"]

# Respect PAM account management.
auth-pam-accounts = ["auth-pam"]

[dependencies]
log        = "0.3"
env_logger = "0.3"

clap  = "2"
xdg   = "2"
toml  = "0.1"
rand  = "0.3"
users = "0.5"
dbus  = "0.3"

libc               = "0.2"
xcb                = { version = "0.7.5", features = ["randr", "dpms", "xkb", "thread"] }
xcb-util           = { version = "0.1.4", features = ["icccm", "thread"] }
xkbcommon          = { version = "0.2",   features = ["x11"] }
screenruster-saver = { version = "0.1",   default-features = false }

[dependencies.pam-sys]
version = "0.4"
optional = true
