[package]
name    = "screenruster"
version = "0.2.1"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "X11 screen saver and locker."
repository  = "https://github.com/meh/screenruster"
keywords    = ["x11", "graphics"]

[features]
default = ["auth-pam"]

# Internal authorization support.
auth-internal = []

# PAM authorization support.
auth-pam = ["pam"]

# Respect PAM account management.
auth-pam-accounts = ["auth-pam"]

[dependencies]
log        = "0.4"
env_logger = "0.7"

clap     = "2"
app_dirs = "1.1"
toml     = "0.5"
rand     = "0.7"
users    = "0.9"
dbus     = "0.8"
channel  = { package = "crossbeam-channel", version = "0.4" }
pam      = { package = "pam-sys", optional = true, version = "0.5" }

libc  = "0.2"
xcb   = { version = "0.9", features = ["randr", "dpms", "xkb", "thread"] }
xcbu  = { package = "xcb-util", version = "0.3", features = ["icccm", "ewmh", "thread"] }
xkb   = { version = "0.2", features = ["x11"] }
api   = { package = "screenruster-saver", version = "0.2", default-features = false, path = "../saver" }
